# nodi

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-jq.txt  requirements-providers.txt  requirements.txt  resolver_improved.py  sample.http  setup.py  test_repl_fix.py  verify_install.py
docs/: DEVELOPMENT.md  DOCUMENTATION.md  FILTERS.md  FILTER_EXAMPLES.md  FINAL_STATUS.md  FIXES_SUMMARY.md  INSTALLATION_SUCCESS.md  PLUGINS.md  PYTHON_SCRIPTING.md  PYTHON_SCRIPTING_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  REPL_QUICKSTART.md  TROUBLESHOOTING.md  inline-headers.md  nodi_prompt.md  repl-variables-examples.md  variables.md
docs/archive/: PROJECT_SUMMARY.md  README.md  SCRIPTING_IMPLEMENTATION_SUMMARY.md
examples/config/: example-config.yml
nodi/: __init__.py  __main__.py  certificates.py  cli.py  config.py  filters.py  history.py  projections.py  repl.py
nodi/config/: __init__.py  loader.py  models.py  validator.py
nodi/environment/: __init__.py  headers.py  manager.py  resolver.py
nodi/formatters/: __init__.py  csv_fmt.py  json.py  table.py  yaml_fmt.py
nodi/plugins/: __init__.py  base.py
nodi/providers/: __init__.py  base.py  manager.py  rest.py
nodi/scripting/: __init__.py  engine.py  parser.py  python_api.py  python_runner.py  suite.py
nodi/utils/: __init__.py  color.py  validators.py
tests/: __init__.py  test_config.py  test_custom_param_names.py  test_custom_param_simple.py  test_custom_params_final.py  test_filters_integration.py  test_path_params.py  test_path_params_advanced.py  test_path_params_special.py  test_predefined_filters.py  test_projections.py  test_repl_path_params.py  test_scripting_system.py
